parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT

Grammar

Rule 0     S' -> program
Rule 1     program -> declarations optional_statements
Rule 2     identifier_list -> ID
Rule 3     identifier_list -> identifier_list COMA ID
Rule 4     declarations -> declarations VAR type identifier_list COLON
Rule 5     declarations -> empty
Rule 6     type -> INT
Rule 7     type -> FLOAT
Rule 8     type -> STR
Rule 9     optional_statements -> statement_list
Rule 10    optional_statements -> empty
Rule 11    statement_list -> statement
Rule 12    statement_list -> statement_list statement
Rule 13    statement -> IF OPEN expression CLOSE THEN compound_statement ELSE compound_statement
Rule 14    statement -> WHILE OPEN expression CLOSE compound_statement
Rule 15    statement -> subprogram_declarations
Rule 16    statement -> expression
Rule 17    statement -> out
Rule 18    subprogram_declarations -> subprogram_declaration
Rule 19    subprogram_declarations -> subprogram_declarations subprogram_declaration
Rule 20    subprogram_declaration -> subprogram_head declarations compound_statement
Rule 21    subprogram_head -> FUNK ID arguments
Rule 22    arguments -> OPEN parameter_list CLOSE
Rule 23    parameter_list -> type identifier_list
Rule 24    parameter_list -> parameter_list COLON type identifier_list
Rule 25    compound_statement -> OPEN_CONSTR optional_statements CLOSE_CONSTR
Rule 26    expression_list -> expression
Rule 27    expression_list -> expression_list COMA expression
Rule 28    expression -> NOT simple_expression
Rule 29    expression -> RETURN simple_expression
Rule 30    expression -> expression AND simple_expression
Rule 31    expression -> expression OR simple_expression
Rule 32    expression -> simple_expression RELOP simple_expression
Rule 33    expression -> simple_expression
Rule 34    simple_expression -> term
Rule 35    simple_expression -> eqstate
Rule 36    eqstate -> factor EQUAL term
Rule 37    eqstate -> factor
Rule 38    term -> dvml
Rule 39    term -> term PLUSMINUS dvml
Rule 40    dvml -> factor
Rule 41    dvml -> dvml DIVMUL factor
Rule 42    out -> PRINT OPEN factor CLOSE COLON
Rule 43    in -> INPUT OPEN CLOSE COLON
Rule 44    factor -> ID
Rule 45    factor -> ID OPEN expression_list CLOSE
Rule 46    factor -> NUM
Rule 47    factor -> CONTINUE
Rule 48    factor -> BREAK
Rule 49    factor -> FLOAT_NUM
Rule 50    factor -> OPEN expression CLOSE
Rule 51    factor -> type factor
Rule 52    factor -> NOT factor
Rule 53    factor -> MARK STRING MARK
Rule 54    factor -> factor COLON
Rule 55    empty -> <empty>

Terminals, with rules where they appear

AND                  : 30
BREAK                : 48
CLOSE                : 13 14 22 42 43 45 50
CLOSE_CONSTR         : 25
COLON                : 4 24 42 43 54
COMA                 : 3 27
COMMENT              : 
CONTINUE             : 47
DIVMUL               : 41
ELSE                 : 13
EQUAL                : 36
FLOAT                : 7
FLOAT_NUM            : 49
FUNK                 : 21
ID                   : 2 3 21 44 45
IF                   : 13
INPUT                : 43
INT                  : 6
MARK                 : 53 53
NOT                  : 28 52
NUM                  : 46
OPEN                 : 13 14 22 42 43 45 50
OPEN_CONSTR          : 25
OR                   : 31
PLUSMINUS            : 39
PRINT                : 42
RELOP                : 32
RETURN               : 29
STR                  : 8
STRING               : 53
THEN                 : 13
VAR                  : 4
WHILE                : 14
error                : 

Nonterminals, with rules where they appear

arguments            : 21
compound_statement   : 13 13 14 20
declarations         : 1 4 20
dvml                 : 38 39 41
empty                : 5 10
eqstate              : 35
expression           : 13 14 16 26 27 30 31 50
expression_list      : 27 45
factor               : 36 37 40 41 42 51 52 54
identifier_list      : 3 4 23 24
in                   : 
optional_statements  : 1 25
out                  : 17
parameter_list       : 22 24
program              : 0
simple_expression    : 28 29 30 31 32 32 33
statement            : 11 12
statement_list       : 9 12
subprogram_declaration : 18 19
subprogram_declarations : 15 19
subprogram_head      : 20
term                 : 34 36 39
type                 : 4 23 24 51

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declarations optional_statements
    (4) declarations -> . declarations VAR type identifier_list COLON
    (5) declarations -> . empty
    (55) empty -> .

    VAR             reduce using rule 55 (empty -> .)
    IF              reduce using rule 55 (empty -> .)
    WHILE           reduce using rule 55 (empty -> .)
    NOT             reduce using rule 55 (empty -> .)
    RETURN          reduce using rule 55 (empty -> .)
    PRINT           reduce using rule 55 (empty -> .)
    FUNK            reduce using rule 55 (empty -> .)
    ID              reduce using rule 55 (empty -> .)
    NUM             reduce using rule 55 (empty -> .)
    CONTINUE        reduce using rule 55 (empty -> .)
    BREAK           reduce using rule 55 (empty -> .)
    FLOAT_NUM       reduce using rule 55 (empty -> .)
    OPEN            reduce using rule 55 (empty -> .)
    MARK            reduce using rule 55 (empty -> .)
    INT             reduce using rule 55 (empty -> .)
    FLOAT           reduce using rule 55 (empty -> .)
    STR             reduce using rule 55 (empty -> .)
    $end            reduce using rule 55 (empty -> .)

    program                        shift and go to state 1
    declarations                   shift and go to state 2
    empty                          shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> declarations . optional_statements
    (4) declarations -> declarations . VAR type identifier_list COLON
    (9) optional_statements -> . statement_list
    (10) optional_statements -> . empty
    (11) statement_list -> . statement
    (12) statement_list -> . statement_list statement
    (55) empty -> .
    (13) statement -> . IF OPEN expression CLOSE THEN compound_statement ELSE compound_statement
    (14) statement -> . WHILE OPEN expression CLOSE compound_statement
    (15) statement -> . subprogram_declarations
    (16) statement -> . expression
    (17) statement -> . out
    (18) subprogram_declarations -> . subprogram_declaration
    (19) subprogram_declarations -> . subprogram_declarations subprogram_declaration
    (28) expression -> . NOT simple_expression
    (29) expression -> . RETURN simple_expression
    (30) expression -> . expression AND simple_expression
    (31) expression -> . expression OR simple_expression
    (32) expression -> . simple_expression RELOP simple_expression
    (33) expression -> . simple_expression
    (42) out -> . PRINT OPEN factor CLOSE COLON
    (20) subprogram_declaration -> . subprogram_head declarations compound_statement
    (34) simple_expression -> . term
    (35) simple_expression -> . eqstate
    (21) subprogram_head -> . FUNK ID arguments
    (38) term -> . dvml
    (39) term -> . term PLUSMINUS dvml
    (36) eqstate -> . factor EQUAL term
    (37) eqstate -> . factor
    (40) dvml -> . factor
    (41) dvml -> . dvml DIVMUL factor
    (44) factor -> . ID
    (45) factor -> . ID OPEN expression_list CLOSE
    (46) factor -> . NUM
    (47) factor -> . CONTINUE
    (48) factor -> . BREAK
    (49) factor -> . FLOAT_NUM
    (50) factor -> . OPEN expression CLOSE
    (51) factor -> . type factor
    (52) factor -> . NOT factor
    (53) factor -> . MARK STRING MARK
    (54) factor -> . factor COLON
    (6) type -> . INT
    (7) type -> . FLOAT
    (8) type -> . STR

    VAR             shift and go to state 5
    $end            reduce using rule 55 (empty -> .)
    IF              shift and go to state 10
    WHILE           shift and go to state 13
    NOT             shift and go to state 17
    RETURN          shift and go to state 19
    PRINT           shift and go to state 20
    FUNK            shift and go to state 25
    ID              shift and go to state 26
    NUM             shift and go to state 28
    CONTINUE        shift and go to state 29
    BREAK           shift and go to state 30
    FLOAT_NUM       shift and go to state 31
    OPEN            shift and go to state 11
    MARK            shift and go to state 32
    INT             shift and go to state 33
    FLOAT           shift and go to state 34
    STR             shift and go to state 35

    optional_statements            shift and go to state 4
    type                           shift and go to state 6
    statement_list                 shift and go to state 7
    empty                          shift and go to state 8
    statement                      shift and go to state 9
    expression                     shift and go to state 12
    subprogram_declarations        shift and go to state 14
    out                            shift and go to state 15
    subprogram_declaration         shift and go to state 16
    simple_expression              shift and go to state 18
    factor                         shift and go to state 21
    subprogram_head                shift and go to state 22
    term                           shift and go to state 23
    eqstate                        shift and go to state 24
    dvml                           shift and go to state 27

state 3

    (5) declarations -> empty .

    VAR             reduce using rule 5 (declarations -> empty .)
    IF              reduce using rule 5 (declarations -> empty .)
    WHILE           reduce using rule 5 (declarations -> empty .)
    NOT             reduce using rule 5 (declarations -> empty .)
    RETURN          reduce using rule 5 (declarations -> empty .)
    PRINT           reduce using rule 5 (declarations -> empty .)
    FUNK            reduce using rule 5 (declarations -> empty .)
    ID              reduce using rule 5 (declarations -> empty .)
    NUM             reduce using rule 5 (declarations -> empty .)
    CONTINUE        reduce using rule 5 (declarations -> empty .)
    BREAK           reduce using rule 5 (declarations -> empty .)
    FLOAT_NUM       reduce using rule 5 (declarations -> empty .)
    OPEN            reduce using rule 5 (declarations -> empty .)
    MARK            reduce using rule 5 (declarations -> empty .)
    INT             reduce using rule 5 (declarations -> empty .)
    FLOAT           reduce using rule 5 (declarations -> empty .)
    STR             reduce using rule 5 (declarations -> empty .)
    $end            reduce using rule 5 (declarations -> empty .)
    OPEN_CONSTR     reduce using rule 5 (declarations -> empty .)


state 4

    (1) program -> declarations optional_statements .

    $end            reduce using rule 1 (program -> declarations optional_statements .)


state 5

    (4) declarations -> declarations VAR . type identifier_list COLON
    (6) type -> . INT
    (7) type -> . FLOAT
    (8) type -> . STR

    INT             shift and go to state 33
    FLOAT           shift and go to state 34
    STR             shift and go to state 35

    type                           shift and go to state 36

state 6

    (51) factor -> type . factor
    (44) factor -> . ID
    (45) factor -> . ID OPEN expression_list CLOSE
    (46) factor -> . NUM
    (47) factor -> . CONTINUE
    (48) factor -> . BREAK
    (49) factor -> . FLOAT_NUM
    (50) factor -> . OPEN expression CLOSE
    (51) factor -> . type factor
    (52) factor -> . NOT factor
    (53) factor -> . MARK STRING MARK
    (54) factor -> . factor COLON
    (6) type -> . INT
    (7) type -> . FLOAT
    (8) type -> . STR

    ID              shift and go to state 26
    NUM             shift and go to state 28
    CONTINUE        shift and go to state 29
    BREAK           shift and go to state 30
    FLOAT_NUM       shift and go to state 31
    OPEN            shift and go to state 11
    NOT             shift and go to state 38
    MARK            shift and go to state 32
    INT             shift and go to state 33
    FLOAT           shift and go to state 34
    STR             shift and go to state 35

    type                           shift and go to state 6
    factor                         shift and go to state 37

state 7

    (9) optional_statements -> statement_list .
    (12) statement_list -> statement_list . statement
    (13) statement -> . IF OPEN expression CLOSE THEN compound_statement ELSE compound_statement
    (14) statement -> . WHILE OPEN expression CLOSE compound_statement
    (15) statement -> . subprogram_declarations
    (16) statement -> . expression
    (17) statement -> . out
    (18) subprogram_declarations -> . subprogram_declaration
    (19) subprogram_declarations -> . subprogram_declarations subprogram_declaration
    (28) expression -> . NOT simple_expression
    (29) expression -> . RETURN simple_expression
    (30) expression -> . expression AND simple_expression
    (31) expression -> . expression OR simple_expression
    (32) expression -> . simple_expression RELOP simple_expression
    (33) expression -> . simple_expression
    (42) out -> . PRINT OPEN factor CLOSE COLON
    (20) subprogram_declaration -> . subprogram_head declarations compound_statement
    (34) simple_expression -> . term
    (35) simple_expression -> . eqstate
    (21) subprogram_head -> . FUNK ID arguments
    (38) term -> . dvml
    (39) term -> . term PLUSMINUS dvml
    (36) eqstate -> . factor EQUAL term
    (37) eqstate -> . factor
    (40) dvml -> . factor
    (41) dvml -> . dvml DIVMUL factor
    (44) factor -> . ID
    (45) factor -> . ID OPEN expression_list CLOSE
    (46) factor -> . NUM
    (47) factor -> . CONTINUE
    (48) factor -> . BREAK
    (49) factor -> . FLOAT_NUM
    (50) factor -> . OPEN expression CLOSE
    (51) factor -> . type factor
    (52) factor -> . NOT factor
    (53) factor -> . MARK STRING MARK
    (54) factor -> . factor COLON
    (6) type -> . INT
    (7) type -> . FLOAT
    (8) type -> . STR

    $end            reduce using rule 9 (optional_statements -> statement_list .)
    CLOSE_CONSTR    reduce using rule 9 (optional_statements -> statement_list .)
    IF              shift and go to state 10
    WHILE           shift and go to state 13
    NOT             shift and go to state 17
    RETURN          shift and go to state 19
    PRINT           shift and go to state 20
    FUNK            shift and go to state 25
    ID              shift and go to state 26
    NUM             shift and go to state 28
    CONTINUE        shift and go to state 29
    BREAK           shift and go to state 30
    FLOAT_NUM       shift and go to state 31
    OPEN            shift and go to state 11
    MARK            shift and go to state 32
    INT             shift and go to state 33
    FLOAT           shift and go to state 34
    STR             shift and go to state 35

    statement                      shift and go to state 39
    expression                     shift and go to state 12
    subprogram_declarations        shift and go to state 14
    out                            shift and go to state 15
    subprogram_declaration         shift and go to state 16
    simple_expression              shift and go to state 18
    factor                         shift and go to state 21
    subprogram_head                shift and go to state 22
    term                           shift and go to state 23
    eqstate                        shift and go to state 24
    dvml                           shift and go to state 27
    type                           shift and go to state 6

state 8

    (10) optional_statements -> empty .

    $end            reduce using rule 10 (optional_statements -> empty .)
    CLOSE_CONSTR    reduce using rule 10 (optional_statements -> empty .)


state 9

    (11) statement_list -> statement .

    IF              reduce using rule 11 (statement_list -> statement .)
    WHILE           reduce using rule 11 (statement_list -> statement .)
    NOT             reduce using rule 11 (statement_list -> statement .)
    RETURN          reduce using rule 11 (statement_list -> statement .)
    PRINT           reduce using rule 11 (statement_list -> statement .)
    FUNK            reduce using rule 11 (statement_list -> statement .)
    ID              reduce using rule 11 (statement_list -> statement .)
    NUM             reduce using rule 11 (statement_list -> statement .)
    CONTINUE        reduce using rule 11 (statement_list -> statement .)
    BREAK           reduce using rule 11 (statement_list -> statement .)
    FLOAT_NUM       reduce using rule 11 (statement_list -> statement .)
    OPEN            reduce using rule 11 (statement_list -> statement .)
    MARK            reduce using rule 11 (statement_list -> statement .)
    INT             reduce using rule 11 (statement_list -> statement .)
    FLOAT           reduce using rule 11 (statement_list -> statement .)
    STR             reduce using rule 11 (statement_list -> statement .)
    $end            reduce using rule 11 (statement_list -> statement .)
    CLOSE_CONSTR    reduce using rule 11 (statement_list -> statement .)


state 10

    (13) statement -> IF . OPEN expression CLOSE THEN compound_statement ELSE compound_statement

    OPEN            shift and go to state 40


state 11

    (50) factor -> OPEN . expression CLOSE
    (28) expression -> . NOT simple_expression
    (29) expression -> . RETURN simple_expression
    (30) expression -> . expression AND simple_expression
    (31) expression -> . expression OR simple_expression
    (32) expression -> . simple_expression RELOP simple_expression
    (33) expression -> . simple_expression
    (34) simple_expression -> . term
    (35) simple_expression -> . eqstate
    (38) term -> . dvml
    (39) term -> . term PLUSMINUS dvml
    (36) eqstate -> . factor EQUAL term
    (37) eqstate -> . factor
    (40) dvml -> . factor
    (41) dvml -> . dvml DIVMUL factor
    (44) factor -> . ID
    (45) factor -> . ID OPEN expression_list CLOSE
    (46) factor -> . NUM
    (47) factor -> . CONTINUE
    (48) factor -> . BREAK
    (49) factor -> . FLOAT_NUM
    (50) factor -> . OPEN expression CLOSE
    (51) factor -> . type factor
    (52) factor -> . NOT factor
    (53) factor -> . MARK STRING MARK
    (54) factor -> . factor COLON
    (6) type -> . INT
    (7) type -> . FLOAT
    (8) type -> . STR

    NOT             shift and go to state 17
    RETURN          shift and go to state 19
    ID              shift and go to state 26
    NUM             shift and go to state 28
    CONTINUE        shift and go to state 29
    BREAK           shift and go to state 30
    FLOAT_NUM       shift and go to state 31
    OPEN            shift and go to state 11
    MARK            shift and go to state 32
    INT             shift and go to state 33
    FLOAT           shift and go to state 34
    STR             shift and go to state 35

    expression                     shift and go to state 41
    simple_expression              shift and go to state 18
    term                           shift and go to state 23
    eqstate                        shift and go to state 24
    dvml                           shift and go to state 27
    factor                         shift and go to state 21
    type                           shift and go to state 6

state 12

    (16) statement -> expression .
    (30) expression -> expression . AND simple_expression
    (31) expression -> expression . OR simple_expression

    IF              reduce using rule 16 (statement -> expression .)
    WHILE           reduce using rule 16 (statement -> expression .)
    NOT             reduce using rule 16 (statement -> expression .)
    RETURN          reduce using rule 16 (statement -> expression .)
    PRINT           reduce using rule 16 (statement -> expression .)
    FUNK            reduce using rule 16 (statement -> expression .)
    ID              reduce using rule 16 (statement -> expression .)
    NUM             reduce using rule 16 (statement -> expression .)
    CONTINUE        reduce using rule 16 (statement -> expression .)
    BREAK           reduce using rule 16 (statement -> expression .)
    FLOAT_NUM       reduce using rule 16 (statement -> expression .)
    OPEN            reduce using rule 16 (statement -> expression .)
    MARK            reduce using rule 16 (statement -> expression .)
    INT             reduce using rule 16 (statement -> expression .)
    FLOAT           reduce using rule 16 (statement -> expression .)
    STR             reduce using rule 16 (statement -> expression .)
    $end            reduce using rule 16 (statement -> expression .)
    CLOSE_CONSTR    reduce using rule 16 (statement -> expression .)
    AND             shift and go to state 42
    OR              shift and go to state 43


state 13

    (14) statement -> WHILE . OPEN expression CLOSE compound_statement

    OPEN            shift and go to state 44


state 14

    (15) statement -> subprogram_declarations .
    (19) subprogram_declarations -> subprogram_declarations . subprogram_declaration
    (20) subprogram_declaration -> . subprogram_head declarations compound_statement
    (21) subprogram_head -> . FUNK ID arguments

  ! shift/reduce conflict for FUNK resolved as shift
    IF              reduce using rule 15 (statement -> subprogram_declarations .)
    WHILE           reduce using rule 15 (statement -> subprogram_declarations .)
    NOT             reduce using rule 15 (statement -> subprogram_declarations .)
    RETURN          reduce using rule 15 (statement -> subprogram_declarations .)
    PRINT           reduce using rule 15 (statement -> subprogram_declarations .)
    ID              reduce using rule 15 (statement -> subprogram_declarations .)
    NUM             reduce using rule 15 (statement -> subprogram_declarations .)
    CONTINUE        reduce using rule 15 (statement -> subprogram_declarations .)
    BREAK           reduce using rule 15 (statement -> subprogram_declarations .)
    FLOAT_NUM       reduce using rule 15 (statement -> subprogram_declarations .)
    OPEN            reduce using rule 15 (statement -> subprogram_declarations .)
    MARK            reduce using rule 15 (statement -> subprogram_declarations .)
    INT             reduce using rule 15 (statement -> subprogram_declarations .)
    FLOAT           reduce using rule 15 (statement -> subprogram_declarations .)
    STR             reduce using rule 15 (statement -> subprogram_declarations .)
    $end            reduce using rule 15 (statement -> subprogram_declarations .)
    CLOSE_CONSTR    reduce using rule 15 (statement -> subprogram_declarations .)
    FUNK            shift and go to state 25

  ! FUNK            [ reduce using rule 15 (statement -> subprogram_declarations .) ]

    subprogram_declaration         shift and go to state 45
    subprogram_head                shift and go to state 22

state 15

    (17) statement -> out .

    IF              reduce using rule 17 (statement -> out .)
    WHILE           reduce using rule 17 (statement -> out .)
    NOT             reduce using rule 17 (statement -> out .)
    RETURN          reduce using rule 17 (statement -> out .)
    PRINT           reduce using rule 17 (statement -> out .)
    FUNK            reduce using rule 17 (statement -> out .)
    ID              reduce using rule 17 (statement -> out .)
    NUM             reduce using rule 17 (statement -> out .)
    CONTINUE        reduce using rule 17 (statement -> out .)
    BREAK           reduce using rule 17 (statement -> out .)
    FLOAT_NUM       reduce using rule 17 (statement -> out .)
    OPEN            reduce using rule 17 (statement -> out .)
    MARK            reduce using rule 17 (statement -> out .)
    INT             reduce using rule 17 (statement -> out .)
    FLOAT           reduce using rule 17 (statement -> out .)
    STR             reduce using rule 17 (statement -> out .)
    $end            reduce using rule 17 (statement -> out .)
    CLOSE_CONSTR    reduce using rule 17 (statement -> out .)


state 16

    (18) subprogram_declarations -> subprogram_declaration .

    FUNK            reduce using rule 18 (subprogram_declarations -> subprogram_declaration .)
    IF              reduce using rule 18 (subprogram_declarations -> subprogram_declaration .)
    WHILE           reduce using rule 18 (subprogram_declarations -> subprogram_declaration .)
    NOT             reduce using rule 18 (subprogram_declarations -> subprogram_declaration .)
    RETURN          reduce using rule 18 (subprogram_declarations -> subprogram_declaration .)
    PRINT           reduce using rule 18 (subprogram_declarations -> subprogram_declaration .)
    ID              reduce using rule 18 (subprogram_declarations -> subprogram_declaration .)
    NUM             reduce using rule 18 (subprogram_declarations -> subprogram_declaration .)
    CONTINUE        reduce using rule 18 (subprogram_declarations -> subprogram_declaration .)
    BREAK           reduce using rule 18 (subprogram_declarations -> subprogram_declaration .)
    FLOAT_NUM       reduce using rule 18 (subprogram_declarations -> subprogram_declaration .)
    OPEN            reduce using rule 18 (subprogram_declarations -> subprogram_declaration .)
    MARK            reduce using rule 18 (subprogram_declarations -> subprogram_declaration .)
    INT             reduce using rule 18 (subprogram_declarations -> subprogram_declaration .)
    FLOAT           reduce using rule 18 (subprogram_declarations -> subprogram_declaration .)
    STR             reduce using rule 18 (subprogram_declarations -> subprogram_declaration .)
    $end            reduce using rule 18 (subprogram_declarations -> subprogram_declaration .)
    CLOSE_CONSTR    reduce using rule 18 (subprogram_declarations -> subprogram_declaration .)


state 17

    (28) expression -> NOT . simple_expression
    (52) factor -> NOT . factor
    (34) simple_expression -> . term
    (35) simple_expression -> . eqstate
    (44) factor -> . ID
    (45) factor -> . ID OPEN expression_list CLOSE
    (46) factor -> . NUM
    (47) factor -> . CONTINUE
    (48) factor -> . BREAK
    (49) factor -> . FLOAT_NUM
    (50) factor -> . OPEN expression CLOSE
    (51) factor -> . type factor
    (52) factor -> . NOT factor
    (53) factor -> . MARK STRING MARK
    (54) factor -> . factor COLON
    (38) term -> . dvml
    (39) term -> . term PLUSMINUS dvml
    (36) eqstate -> . factor EQUAL term
    (37) eqstate -> . factor
    (6) type -> . INT
    (7) type -> . FLOAT
    (8) type -> . STR
    (40) dvml -> . factor
    (41) dvml -> . dvml DIVMUL factor

    ID              shift and go to state 26
    NUM             shift and go to state 28
    CONTINUE        shift and go to state 29
    BREAK           shift and go to state 30
    FLOAT_NUM       shift and go to state 31
    OPEN            shift and go to state 11
    NOT             shift and go to state 38
    MARK            shift and go to state 32
    INT             shift and go to state 33
    FLOAT           shift and go to state 34
    STR             shift and go to state 35
